<resources>

    <string name="app_name">畅享生活</string>
    <string name="network_fail">当前网络不可用，请检查你的网络设置。</string>
    <string name="network_success">网络已连接</string>
    <string name="network_mobile">您的手机正在使用移动网络，将产生数据流量。</string>
    <string name="drop_down_list_header_default_text">点击可以刷新</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开可以刷新</string>
    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>
    <string name="image_content">Image</string>
    <string name="update_at">更新于</string>
    <string name="new_data_toast_none">没有新更新</string>
    <string name="new_data_toast_message">有 %d 条更新</string>
    <string name="remote_call_failed">调用远程服务失败</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="footer_more">更多</string>
    <string name="loading_full">已加载全部</string>
    <string name="text_empty">暂无记录</string>
    <string name="setting_no_app">没有程序执行此操作！</string>
    <string name="home">首页</string>
    <string name="wuye">物业</string>
    <string name="service">便民</string>
    <string name="personal">我的</string>
    <string name="shopping">购物</string>
    <string name="text_bar_login">用户登录</string>
    <string name="text_bar_register">注册</string>
    <string name="text_bar_getPassword">找回密码</string>
    <string name="text_bar_switchCommunity">选择小区</string>
    <string name="text_bar_switchCity">选择城市</string>
    <string name="text_bar_switchResident">选择住处</string>
    <string name="text_bar_registe_success">注册成功</string>
    <string name="text_bar_add_commission">新增代办</string>
    <string name="text_bar_commissions">代办事务</string>
    <string name="text_bar_notice">社区通知</string>
    <string name="text_bar_complaints">投诉与建议</string>
    <string name="text_bar_add_complaint">新增投诉与建议</string>
    <string name="text_bar_call_wuye">呼叫物业</string>
    <string name="text_bar_service_phone">服务电话</string>
    <string name="text_bar_child_safe">儿童安全</string>
    <string name="text_bar_maintenance">设备报修</string>
    <string name="text_bar_add_maintenance">新增设备报修</string>
    <string name="text_bar_interact">邻里互动</string>
    <string name="text_bar_pay_wuye">我要缴费</string>
    <string name="text_bar_personal">个人中心</string>
    <string name="text_bar_personal_info">个人资料</string>
    <string name="text_bar_nickname">昵称</string>
    <string name="text_bar_add_topic">新增话题</string>
    <string name="text_bar_more">更多</string>
    <string name="text_bar_notice_detail">通知详情</string>
    <string name="text_bar_topic_detail">话题详情</string>
    <string name="text_bar_maintenance_detail">报修详情</string>
    <string name="text_bar_commission_detail">代办事务详情</string>
    <string name="text_bar_complaint_detail">投诉与建议详情</string>
    <string name="text_bar_convinience">便民生活</string>
    <string name="text_bar_feed_back">意见反馈</string>
    <string name="text_bar_payment">我要缴费</string>
    <string name="text_bar_payment_property">缴物业费</string>
    <string name="text_bar_shopping">购物</string>
    <string name="text_bar_changepassword">修改密码</string>
    <string name="text_bar_wuye_service">物业服务</string>
    <string name="hint_userName">手机号</string>
    <string name="hint_password">请输入您的密码</string>
    <string name="hint_register_password">6到24位数字或字母</string>
    <string name="hint_register_password_again">请再次输入密码</string>
    <string name="text_login">登录</string>
    <string name="text_registe">注册</string>
    <string name="text_jump_register">我要注册</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_email">邮箱:</string>
    <string name="text_phonenumber">手机号:</string>
    <string name="text_userName">用户名:</string>
    <string name="text_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="text_new_password">新密码:&#160;&#160;&#160;&#160;</string>
    <string name="text_confirm_password">再输一次:</string>
    <string name="text_register">立即注册</string>
    <string name="text_reset_password">重置密码</string>
    <string name="text_agreement">我已同意并阅读</string>
    <string name="text_bar_agreement_protocol">注册许可及服务协议</string>
    <string name="text_agreement_protocol">「注册许可及服务协议」</string>
    <string name="hint_email">请输入您的邮箱</string>
    <string name="text_getVerify_btn">获取验证码</string>
    <string name="text_verify">验证码:</string>
    <string name="hint_verify">请输入验证码</string>
    <string name="text_ok">确定</string>
    <string name="text_set">设置</string>
    <string name="text_cancel">取消</string>
    <string name="text__house_verify_notes">验证码可以为空\n什么是验证码?验证码是房东在物业处预留的手机号的后四位,如果你没有在物业处预留手机号,您的验证码默认为房号.</string>
    <string name="text_set_community">请设置小区</string>
    <string name="text_set_resident_address">请选择您的住处</string>
    <string name="text_select_building">楼栋:</string>
    <string name="hint_select_building">请选择您的楼栋号</string>
    <string name="text_select_unit">单元:</string>
    <string name="hint_select_unit">请选择您的单元</string>
    <string name="text_select_floor">楼层:</string>
    <string name="hint_select_floor">请选择您的楼层</string>
    <string name="text_select_house_number">房号:</string>
    <string name="hint_select_house_number">请选择您的房号</string>
    <string name="text_verify_colon">验证码:</string>
    <string name="hint_house_number">请输入您的房号</string>
    <string name="text_registe_success">恭喜您,注册成功!</string>
    <string name="text_save_password">请妥善保管好您的账户信息</string>
    <string name="text_next">下一步</string>
    <string name="text_commission_type">代办类型</string>
    <string name="text_commission_template">代办模板</string>
    <string name="text_commission_content">输入内容</string>
    <string name="hint_input_commission">请输入代办内容</string>
    <string name="hint_input_complaint">请输入您要申请的内容</string>
    <string name="hint_input_feedback">请输入您的意见</string>
    <string name="text_anonymous">匿名提交</string>
    <string name="text_call_title">呼叫确认</string>
    <string name="text_call_content">你确定拨打 %s ?</string>
    <string name="text_house_info">房屋信息:</string>
    <string name="text_phone_info">联系方式:</string>
    <string name="text_service_time">上门时间:</string>
    <string name="hint_phone_info">请输入联系方式</string>
    <string name="hint_input_maintenance">请输入您要报修的情况</string>
    <string name="text_select_date">选择日期</string>
    <string name="text_select_time">选择时间</string>
    <string name="text_delete">删除</string>
    <string name="text_camera">拍照</string>
    <string name="text_pic_map">从相册选取</string>
    <string name="text_maintenance_phone">联系方式:</string>
    <string name="text_maintenance_type">报修类型:</string>
    <string name="text_maintenance_createtime">报修时间:</string>
    <string name="text_maintenance_servicetime">上门时间:</string>
    <string name="text_maintenance_description">报修描述:</string>
    <string name="text_maintenance_status">报修状态:</string>
    <string name="text_maintenance_reply">报修回复:</string>
    <string name="text_maintenance_handlerName">受理人:</string>
    <string name="text_maintenance_handlerPhone">受理电话:</string>
    <string name="text_maintenance_handlerTime">受理时间:</string>
    <string name="text_maintenance_timely">服务及时:</string>
    <string name="text_maintenance_attitude">服务状态:</string>
    <string name="text_maintenance_quality">服务质量:</string>
    <string name="hint_input_maintenance_evaluation">请对我们的服务进行评价</string>
    <string name="text_delete_pic">确定删除这张照片吗?</string>
    <string name="text_date">上门服务时间</string>
    <string name="text_my_bill">缴费记录</string>
    <string name="text_my_maintenance_search">报修查询</string>
    <string name="text_my_notice">我的消息</string>
    <string name="text_my_topic">我的话题</string>
    <string name="text_my_shopping">我的商城</string>
    <string name="text_login_out">退出登录</string>
    <string name="text_save">保存</string>
    <string name="text_my_commission">代办申请记录</string>
    <string name="text_my_complaint">我的投诉与建议</string>
    <string name="text_my_investment">投资账户管理</string>
    <string name="text_my_head_portrait">头像</string>
    <string name="text_my_nickname">昵称</string>
    <string name="hint_my_nickname">请输入您的昵称</string>
    <string name="text_city">所在城市</string>
    <string name="hint_city">请选择您的城市</string>
    <string name="text_community">所在小区</string>
    <string name="hint_community">请选择您的小区</string>
    <string name="text_address">住处</string>
    <string name="hint_address">请选择您的住处</string>
    <string name="text_name">姓名</string>
    <string name="hint_name">请输入您的姓名</string>
    <string name="text_phone">手机</string>
    <string name="hint_phone">请输入您的手机号</string>
    <string name="text_personal_email">邮箱</string>
    <string name="text_car_number">车牌号</string>
    <string name="hint_car_number">请输入您的车牌号</string>
    <string name="text_nick_notes">为了您的个人隐私,建议您输入昵称.</string>
    <string name="text_switch_community">切换小区</string>
    <string name="text_check_update">检查更新</string>
    <string name="text_feedback">用户反馈</string>
    <string name="text_invote_friends">邀请好友</string>
    <string name="text_about">关于我们</string>
    <string name="text_function">辅助功能</string>
    <string name="hint_input_topic_title">请输入话题标题</string>
    <string name="hint_input_topic_content">请输入话题内容</string>
    <string name="text_send">发送</string>
    <string name="text_dialog_loginout">温馨提示</string>
    <string name="text_dialog_loginout_content">确定退出登录?</string>
    <string name="text_comment">我要评论</string>
    <string name="text_introduction">介绍</string>
    <string name="text_business_hours">营业时间:</string>
    <string name="text_item_phone">电话:</string>
    <string name="text_item_address">地址:</string>
    <string name="text_no_open">此功能暂未开通</string>
    <string name="text_bar_email">验证邮箱</string>
    <string name="text_manual_select_community">手动选择小区</string>
    <string name="text_jump">跳过</string>
    <string name="text_go_now">立即体验</string>
    <string name="text_notice_message">接收推送消息</string>

</resources>