<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/realtabcontent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_button_home"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/home_icon_background"
                android:text="@string/home" />

            <RadioButton
                android:id="@+id/radio_button_wuye"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/wuye_icon_background"
                android:text="@string/wuye" />



            <RadioButton
                android:id="@+id/radio_button_mall"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/shopping_icon_background"
                android:text="@string/shopping" />

            <RadioButton
                android:id="@+id/radio_button_personal"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/personal_icon_background"
                android:text="@string/personal" />
        </RadioGroup>
    </LinearLayout>

    <!-- The navigation drawer -->

    <FrameLayout
        android:id="@+id/leftDrawerContainer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>