<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/dialog_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin" >
	<TextView 
	    android:id="@+id/contentTextView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="@style/textview_color_font"
	    android:gravity="center"
	    android:padding="@dimen/activity_margin"
	    android:text="@string/text_delete_pic"
	    />
    <Button
        android:id="@id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:background="@drawable/wuye_cm_sl_button"
        android:padding="@dimen/activity_margin"
        android:textColor="@color/white"
        android:text="@string/text_ok"
        android:textSize="@dimen/title_textSize" />

    <Button
        android:id="@id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/activity_margin"
        android:background="#ffa0a0a0"
        android:padding="@dimen/activity_margin"
        style="@style/button_color_font"
        android:text="@string/text_cancel"
         />
</LinearLayout>
