<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:background="@drawable/comment_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin" >

            <TextView
                style="@style/textview_color_font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/text_email" />

            <EditText
                android:id="@id/input_email"
                style="@style/edittext_color_font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin" >

            <TextView
                style="@style/textview_color_font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/text_verify" />

            <EditText
                android:id="@id/input_verify"
                style="@style/edittext_color_font"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:hint="@string/hint_verify"
                android:inputType="text" />

            <Button
                android:id="@id/get_verify_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_48"
                android:layout_weight="0.9"
                android:background="@drawable/btn_background_select"
                android:text="@string/text_getVerify_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/notes_textSize" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@id/ok_btn"
        style="@style/button_color_font"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:background="@drawable/btn_background_select"
        android:text="@string/text_save" />

</LinearLayout>