<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/dialog_background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/textview_color_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_margin"
        android:text="@string/text_dialog_loginout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_background" />

    <TextView
        android:id="@id/dialog_call_content"
        style="@style/textview_color_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_margin"
        android:text="@string/text_dialog_loginout_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@id/ok_btn"
            style="@style/button_color_font"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_background_select"
            android:text="@string/text_ok" />

        <Button
            android:id="@id/cancel_btn"
            style="@style/button_color_font"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_48"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_cancle_background"
            android:text="@string/text_cancel" />
    </LinearLayout>

</LinearLayout>